Fixing alignment of sidebar and canvas

--- a/LyricChart/scss/main.scss
+++ b/LyricChart/scss/main.scss
@@ -122,7 +122,7 @@ body {
 
     .container {
 
-        max-width: calc(20vw + 100vh);
+        max-width: calc(21vw + 100vh);
         position: absolute;
         left: 50%;
         top: 50%;
